Add code to handle game over

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </div>
 
     <div class="board">
+      <div id="game-result" class="game-over hidden">
+          Game Over
+      </div>
       <div class="button-wrapper"><button></button></div>
       <div class="button-wrapper"><button></button></div>
       <div class="button-wrapper"><button></button></div>
